// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <div
    class="mfui-search"
  >
    <div
      class="mfui-search__control"
    >
      <label
        class="mfui-search__search-wrapper mfui-search__search-wrapper_no-label"
        for="mfuiSearchId"
      >
        <input
          autocomplete="off"
          class="mfui-search__search-field"
          id="mfuiSearchId"
          type="text"
          value=""
        />
      </label>
      <div
        class="mfui-search__icon-box"
      >
        <test-file-stub
          classname="mfui-search__icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render with items 1`] = `
<div>
  <div
    class="mfui-search"
    data-testid="root"
  >
    <div
      class="mfui-search__control"
      data-testid="control"
    >
      <label
        class="mfui-search__search-wrapper mfui-search__search-wrapper_no-label"
        for="mfuiSearchId"
      >
        <input
          autocomplete="off"
          class="mfui-search__search-field"
          data-testid="searchField"
          id="mfuiSearchId"
          type="text"
          value=""
        />
      </label>
      <div
        class="mfui-search__icon-box"
        data-testid="submit"
      >
        <test-file-stub
          classname="mfui-search__icon"
        />
      </div>
      <div
        class="mfui-search__list"
      >
        <div
          class="mfui-search__list-inner"
        >
          <div
            class="mfui-search__list-item mfui-search__list-item_paddings_large"
            data-testid="item[1]"
          >
            <div
              class="mfui-search__item-title"
              data-testid="itemTitle[1]"
            >
              t
              <span
                class="mfui-search__highlighted-fragment"
              />
              i
              <span
                class="mfui-search__highlighted-fragment"
              />
              t
              <span
                class="mfui-search__highlighted-fragment"
              />
              l
              <span
                class="mfui-search__highlighted-fragment"
              />
              e
            </div>
          </div>
          <div
            class="mfui-search__list-item mfui-search__list-item_paddings_small"
            data-testid="item[2]"
          >
            <div
              class="mfui-search__item-title"
              data-testid="itemTitle[2]"
            >
              <div>
                <div>
                  <b>
                    ИП Баранник Александр Николаевич
                  </b>
                </div>
                <div>
                  <b>
                    ИНН: 503209463031
                  </b>
                </div>
                <div>
                  Московская обл, Одинцовский р-н, г Одинцово
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render with label 1`] = `
<div
  class="mfui-search__label"
>
  label
</div>
`;

exports[`<Search /> should render with noticeText and verification="valid" 1`] = `
<div
  class="mfui-search__notice mfui-search__notice_success"
  data-testid="notice"
>
  noticeText
</div>
`;

exports[`<Search /> should render with required 1`] = `
<div
  class="mfui-search__label"
>
  label
  <span
    class="mfui-search__require-mark"
  >
    *
  </span>
</div>
`;
